--- a/news.html
+++ b/news.html
@@ -24,7 +24,7 @@
                 <ul class="top-nav_items">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#">Services</a></li>
-                    <li><a href="#">Cost</a></li>
+                    <li><a href="news.html">News</a></li>
                     <li><a href="#">Usage method</a></li>
                     <li><a href="company.html">Company profile</a></li>
                     <li><a href="#">Contact</a></li>
@@ -55,29 +55,206 @@
         <div class="container">
             <div class="news_1">
                 <h1>最新ニュース</h1>
-                <div class="news_1-cards">
-                    <div class="row">
-                        <div class="col-lg-4 col-md-6 col-sm-12">
-                            <div class="news_1-cards_card">
-                                <img src="img/news/card-img.png" alt="card-img">
-                                <div class="news_1-cards_card__content">
-                                    <h3>SNIFF GROUPの魅力！</h3>
-                                    <div class="news_1-cards_card__content-icon">
-                                        <img src="img/news/news-icons/calendar-red.png" alt="red">
-                                        <span>2020.03.30</span>
-                                    </div>
-                                    <p>最近、様々なお問い合わせがあります。それはやっぱり
-                                        ・人の目によるこだわり抜かれた品質管理
-                                        ・AIを使った最新の技術による配送作業効率化
-                                        ということですね。
-                                    </p>
-                                    <a href="#" class="btn btn-red"></a>
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="news_1-card news_1-card_red">
+                            <img src="img/news/card-img.png" alt="card-img">
+                            <div class="news_1-card__content">
+                                <h3>SNIFF GROUPの魅力！</h3>
+                                <div class="news_1-card__content-icon">
+                                    <img src="img/news/news-icons/calendar-red.png" alt="red">
+                                    <span>2020.03.30</span>
                                 </div>
+                                <p>最近、様々なお問い合わせがあります。それはやっぱり
+                                    ・人の目によるこだわり抜かれた品質管理
+                                    ・AIを使った最新の技術による配送作業効率化
+                                    ということですね。
+                                </p>
+                                <a href="#" class="btn btn-red">ニュースを見る</a>
                             </div>
-                            <!-- /.news_1-cards_card -->
                         </div>
+                        <!-- /.news_1-cards_card -->
                     </div>
+                    <!-- col -->
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="news_1-card news_1-card_yellow">
+                            <img src="img/news/card-img.png" alt="card-img">
+                            <div class="news_1-card__content">
+                                <h3>SNIFF GROUPの魅力！</h3>
+                                <div class="news_1-card__content-icon">
+                                    <img src="img/news/news-icons/calendar-yellow.png" alt="yellow">
+                                    <span>2020.03.30</span>
+                                </div>
+                                <p>最近、様々なお問い合わせがあります。それはやっぱり
+                                    ・人の目によるこだわり抜かれた品質管理
+                                    ・AIを使った最新の技術による配送作業効率化
+                                    ということですね。
+                                </p>
+                                <a href="#" class="btn btn-yellow">ニュースを見る</a>
+                            </div>
+                        </div>
+                        <!-- /.news_1-cards_card -->
+                    </div>
+                    <!-- col -->
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="news_1-card news_1-card_primary">
+                            <img src="img/news/card-img.png" alt="card-img">
+                            <div class="news_1-card__content">
+                                <h3>SNIFF GROUPの魅力！</h3>
+                                <div class="news_1-card__content-icon">
+                                    <img src="img/news/news-icons/calendar-blue.png" alt="blue">
+                                    <span>2020.03.30</span>
+                                </div>
+                                <p>最近、様々なお問い合わせがあります。それはやっぱり
+                                    ・人の目によるこだわり抜かれた品質管理
+                                    ・AIを使った最新の技術による配送作業効率化
+                                    ということですね。
+                                </p>
+                                <a href="#" class="btn btn-primary">ニュースを見る</a>
+                            </div>
+                        </div>
+                        <!-- /.news_1-cards_card -->
+                    </div>
+                    <!-- col -->
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="news_1-card news_1-card_green">
+                            <img src="img/news/card-img.png" alt="card-img">
+                            <div class="news_1-card__content">
+                                <h3>SNIFF GROUPの魅力！</h3>
+                                <div class="news_1-card__content-icon">
+                                    <img src="img/news/news-icons/calendar-green.png" alt="green">
+                                    <span>2020.03.30</span>
+                                </div>
+                                <p>最近、様々なお問い合わせがあります。それはやっぱり
+                                    ・人の目によるこだわり抜かれた品質管理
+                                    ・AIを使った最新の技術による配送作業効率化
+                                    ということですね。
+                                </p>
+                                <a href="#" class="btn btn-green">ニュースを見る</a>
+                            </div>
+                        </div>
+                        <!-- /.news_1-cards_card -->
+                    </div>
+                    <!-- col -->
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="news_1-card news_1-card_grey">
+                            <img src="img/news/card-img.png" alt="card-img">
+                            <div class="news_1-card__content">
+                                <h3>SNIFF GROUPの魅力！</h3>
+                                <div class="news_1-card__content-icon">
+                                    <img src="img/news/news-icons/calendar-grey.png" alt="grey">
+                                    <span>2020.03.30</span>
+                                </div>
+                                <p>最近、様々なお問い合わせがあります。それはやっぱり
+                                    ・人の目によるこだわり抜かれた品質管理
+                                    ・AIを使った最新の技術による配送作業効率化
+                                    ということですね。
+                                </p>
+                                <a href="#" class="btn btn-grey">ニュースを見る</a>
+                            </div>
+                        </div>
+                        <!-- /.news_1-cards_card -->
+                    </div>
+                    <!-- col -->
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="news_1-card news_1-card_orange">
+                            <img src="img/news/card-img.png" alt="card-img">
+                            <div class="news_1-card__content">
+                                <h3>SNIFF GROUPの魅力！</h3>
+                                <div class="news_1-card__content-icon">
+                                    <img src="img/news/news-icons/calendar-orange.png" alt="orange">
+                                    <span>2020.03.30</span>
+                                </div>
+                                <p>最近、様々なお問い合わせがあります。それはやっぱり
+                                    ・人の目によるこだわり抜かれた品質管理
+                                    ・AIを使った最新の技術による配送作業効率化
+                                    ということですね。
+                                </p>
+                                <a href="#" class="btn btn-orange">ニュースを見る</a>
+                            </div>
+                        </div>
+                        <!-- /.news_1-cards_card -->
+                    </div>
+                    <!-- col -->
                 </div>
+                <!-- row -->  
+                 <div class="news_1-pagination">
+                     <div class="news_1-pagination_numbers">
+                        <a href="#"><img src="img/icons/left-arrow.png" alt="left"></a>
+                        <a href="#" class="news_1-pagination_numbers_active">1</a>
+                        <a href="#">2</a>
+                        <a href="#"><img src="img/icons/right-arrow.png" alt="right"></a>
+                     </div>
+                 </div>
+                 <!-- /.news_1-pagination -->
+
+                 <div class="news_1-content">
+                     <h1>前のニュース</h1>
+                  
+                        <div class="row news_1-content-center">
+                            <div class="col-10">
+                               <div class="news_1-content-center-item">
+                                   <h4>2020.03.22</h4>
+                                   <h5>SNIFF GROUPは第32回東京オリンピックオのフィシャルサポーターとしてサポート致します。</h5>
+                               </div>
+                            </div>
+                            <!-- /.col-10 -->
+                            <div class="col-10">
+                                <div class="news_1-content-center-item">
+                                    <h4>2020.03.22</h4>
+                                    <h5>SNIFF GROUPは第32回東京オリンピックオのフィシャルサポーターとしてサポート致します。</h5>
+                                </div>
+                             </div>
+                             <!-- /.col-10 -->
+                             <div class="col-10">
+                                <div class="news_1-content-center-item">
+                                    <h4>2020.03.22</h4>
+                                    <h5>SNIFF GROUPは第32回東京オリンピックオのフィシャルサポーターとしてサポート致します。</h5>
+                                </div>
+                             </div>
+                             <!-- /.col-10 -->
+                             <div class="col-10">
+                                <div class="news_1-content-center-item">
+                                    <h4>2020.03.22</h4>
+                                    <h5>SNIFF GROUPは第32回東京オリンピックオのフィシャルサポーターとしてサポート致します。</h5>
+                                </div>
+                             </div>
+                             <!-- /.col-10 -->
+                             <div class="col-10">
+                                <div class="news_1-content-center-item">
+                                    <h4>2020.03.22</h4>
+                                    <h5>SNIFF GROUPは第32回東京オリンピックオのフィシャルサポーターとしてサポート致します。</h5>
+                                </div>
+                             </div>
+                             <!-- /.col-10 -->
+                             <div class="col-10">
+                                <div class="news_1-content-center-item">
+                                    <h4>2020.03.22</h4>
+                                    <h5>SNIFF GROUPは第32回東京オリンピックオのフィシャルサポーターとしてサポート致します。</h5>
+                                </div>
+                             </div>
+                             <!-- /.col-10 -->
+                             <div class="col-10">
+                                <div class="news_1-content-center-item">
+                                    <h4>2020.03.22</h4>
+                                    <h5>SNIFF GROUPは第32回東京オリンピックオのフィシャルサポーターとしてサポート致します。</h5>
+                                </div>
+                             </div>
+                             <!-- /.col-10 -->
+                             <div class="col-10">
+                                <div class="news_1-content-center-item">
+                                    <h4>2020.03.22</h4>
+                                    <h5>SNIFF GROUPは第32回東京オリンピックオのフィシャルサポーターとしてサポート致します。</h5>
+                                </div>
+                             </div>
+                             <!-- /.col-10 -->
+                        </div>
+                        <!-- /.row -->
+                        <div class="news_1-content_btn">
+                            <a href="#" class="btn btn-primary">See More</a>
+                        </div>
+                 </div>
+                 <!-- /.news_1-content -->
             </div>
             <!-- /.news_1 -->
         </div>
@@ -161,4 +338,3 @@
       <script src="js/script.js"></script>
   </body>
 </html>
-<img src="img/footer-bg.png" alt="card-img">
