--- a/company.html
+++ b/company.html
@@ -24,7 +24,7 @@
                 <ul class="top-nav_items">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#">Services</a></li>
-                    <li><a href="#">Cost</a></li>
+                    <li><a href="news.html">News</a></li>
                     <li><a href="#">Usage method</a></li>
                     <li><a href="company.html">Company profile</a></li>
                     <li><a href="#">Contact</a></li>
