--- a/news.html
+++ b/news.html
@@ -25,7 +25,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="news.html">News</a></li>
-                    <li><a href="#">Usage method</a></li>
+                    <li><a href="register.html">Register</a></li>
                     <li><a href="company.html">Company profile</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
