--- a/register.html
+++ b/register.html
@@ -25,7 +25,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="news.html">News</a></li>
-                    <li><a href="#">Usage method</a></li>
+                    <li><a href="register.html">Register</a></li>
                     <li><a href="company.html">Company profile</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
@@ -48,12 +48,51 @@
 
       <div class="container-fluid">
         <div class="top-page">
-            <h1>News</h1>
-            <h3>NEWS・最新情報</h3>
+            <h1>登録用紙</h1>
+            <h3>登録ページ</h3>
         </div>
         <!-- /.top-page -->
         <div class="container">
-            
+            <div class="register">
+                <h1>ここに登録</h1>
+                <div class="row register-form">
+                    <form>
+                        <div class="col-12 register-form-input">
+                            <label for="1">あなたの名前</label>
+                            <input type="text" id="1"placeholder="">
+                        </div>
+                        <!-- /.register-form-input -->
+                        <div class="col-12 register-form-input">
+                            <label for="1">あなたの名前</label>
+                            <input type="text" id="1"placeholder="">
+                        </div>
+                        <!-- /.register-form-input -->
+                        <div class="col-12 register-form-input">
+                            <label for="1">あなたの名前</label>
+                            <input type="text" id="1"placeholder="">
+                        </div>
+                        <!-- /.register-form-input -->
+                        <div class="col-12 register-form-input">
+                            <label for="1">あなたの名前</label>
+                            <input type="text" id="1"placeholder="">
+                        </div>
+                        <!-- /.register-form-input -->
+                        <div class="col-12 register-form-input">
+                            <label for="1">あなたの名前</label>
+                            <input type="text" id="1"placeholder="">
+                        </div>
+                        <!-- /.register-form-input -->
+                        <div class="register-form-btn">
+                            <button class="btn btn-red">サインアップ</button>
+                        </div>
+                        <!-- /.btn btn-red -->
+                    </form>
+                    <hr>
+                    <p>すでにアカウントをお持ちですか？ <a href="#">ここでログイン</a></p>
+                </div>
+                <!-- /.register-form -->
+            </div>
+            <!-- /.register -->
         </div>
         <!-- /.container -->
       </div>
