--- a/company.html
+++ b/company.html
@@ -25,9 +25,9 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="news.html">News</a></li>
-                    <!-- <li><a href="register.html">Register</a></li> -->
+                    <li><a href="register.html">Register</a></li>
                     <li><a href="guide.html">Guide</a></li>
-                    <li><a href="company.html">Company</a></li>
+                    <li><a href="company.html" class="top-nav_items__active">Company</a></li>
                     <li><a href="pricing.html">Pricing</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -178,6 +178,9 @@
             <h1>私たちのアドレス</h1>
             <ul>
                 <li><a href="#">1 800 123 4567</a></li>
+                <li><a href="#">INFO@EXAMPLE.COM</a></li>
+                <li><a href="#">1122 POTTER RD</a></li>
+                <li><a href="#">CA 32802</a></li>
             </ul>
         </div>
         <!-- col -->
