--- a/services.html
+++ b/services.html
@@ -23,9 +23,9 @@
             <div class="top-nav_menu">
                 <ul class="top-nav_items">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="services.html">Services</a></li>
+                    <li><a href="services.html" class="top-nav_items__active">Services</a></li>
                     <li><a href="news.html">News</a></li>
-                    <!-- <li><a href="register.html">Register</a></li> -->
+                    <li><a href="register.html">Register</a></li>
                     <li><a href="guide.html">Guide</a></li>
                     <li><a href="company.html">Company</a></li>
                     <li><a href="pricing.html">Pricing</a></li>
@@ -368,6 +368,9 @@
             <h1>私たちのアドレス</h1>
             <ul>
                 <li><a href="#">1 800 123 4567</a></li>
+                <li><a href="#">INFO@EXAMPLE.COM</a></li>
+                <li><a href="#">1122 POTTER RD</a></li>
+                <li><a href="#">CA 32802</a></li>
             </ul>
         </div>
         <!-- col -->
