--- a/pricing.html
+++ b/pricing.html
@@ -33,10 +33,10 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="news.html">News</a></li>
-                    <li><a href="register.html" class="top-nav_menu__active">Register</a></li>
+                    <li><a href="register.html">Register</a></li>
                     <li><a href="guide.html">Guide</a></li>
                     <li><a href="company.html">Company</a></li>
-                    <li><a href="pricing.html">Pricing</a></li>
+                    <li><a href="pricing.html" class="top-nav_menu__active">Pricing</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
@@ -55,51 +55,12 @@
 
       <div class="container-fluid">
         <div class="top-page">
-            <h1>登録用紙</h1>
-            <h3>登録ページ</h3>
+            <h1>Services</h1>
+            <h3>業務紹介</h3>
         </div>
         <!-- /.top-page -->
         <div class="container">
-            <div class="register">
-                <h1>ここに登録</h1>
-                <div class="row register-form">
-                    <form>
-                        <div class="col-12 register-form-input">
-                            <label for="1">あなたの名前</label>
-                            <input type="text" id="1"placeholder="">
-                        </div>
-                        <!-- /.register-form-input -->
-                        <div class="col-12 register-form-input">
-                            <label for="1">あなたの名前</label>
-                            <input type="text" id="1"placeholder="">
-                        </div>
-                        <!-- /.register-form-input -->
-                        <div class="col-12 register-form-input">
-                            <label for="1">あなたの名前</label>
-                            <input type="text" id="1"placeholder="">
-                        </div>
-                        <!-- /.register-form-input -->
-                        <div class="col-12 register-form-input">
-                            <label for="1">あなたの名前</label>
-                            <input type="text" id="1"placeholder="">
-                        </div>
-                        <!-- /.register-form-input -->
-                        <div class="col-12 register-form-input">
-                            <label for="1">あなたの名前</label>
-                            <input type="text" id="1"placeholder="">
-                        </div>
-                        <!-- /.register-form-input -->
-                        <div class="register-form-btn">
-                            <button class="btn btn-red">サインアップ</button>
-                        </div>
-                        <!-- /.btn btn-red -->
-                    </form>
-                    <hr>
-                    <p>すでにアカウントをお持ちですか？ <a href="#">ここでログイン</a></p>
-                </div>
-                <!-- /.register-form -->
-            </div>
-            <!-- /.register -->
+            
         </div>
         <!-- /.container -->
       </div>
