--- a/pricing.html
+++ b/pricing.html
@@ -55,14 +55,22 @@
 
       <div class="container-fluid">
         <div class="top-page">
-            <h1>Services</h1>
-            <h3>業務紹介</h3>
+            <h1>PRICE PLAN</h1>
+            <h3>ご利用の流れ</h3>
         </div>
         <!-- /.top-page -->
-        <div class="container">
-            
+        <div class="pricing">
+            <h1>会員別料金表</h1>
+            <div class="row pricing-grids">
+                <div class="col-lg-4 col-md-6 col-sm-12 pricing-grid-1">
+                    <div class="pricing-grid-1_name">NAME</div>
+                    <div class="pricing-grid-1_name2">Name2</div>
+                </div>
+                <!-- /.pricing-grid-1 -->
+            </div>
+            <!-- /.pricing-grids -->
         </div>
-        <!-- /.container -->
+        <!-- /.pricing -->
       </div>
 
       
