--- a/pricing.html
+++ b/pricing.html
@@ -62,7 +62,7 @@
         <div class="pricing">
             <h1>会員別料金表</h1>
             <div class="pricing-grids">
-                <div class="grid1 grid1-50 grid1-100">
+                <div class="grid1">
                     <div class="grid__white"></div>
                     <div class="grid__whiteText">会員費</div>
 
@@ -117,7 +117,7 @@
                   </div>
                   <!-- grid1 -->
 
-                  <div class="grid2 grid2-50 grid2-100">
+                  <div class="grid2">
                     <div class="grid__bgWhite1">プラミアムエコノミー</div>
                     <div class="grid__bgWhite2">ビジネスクラス</div>
                     <div class="grid__bgWhite3">ファーストクラス</div>
@@ -127,9 +127,211 @@
                     <div class="grid__bgWhite7">5%</div>
                     <div class="grid__bgWhite8">無料</div>
                     <div class="grid__bgWhite9">無料</div>
+                    <div class="grid__bgWhite10">5元/リンク</div>
+                    <div class="grid__bgWhite11">毎月20リンクまで無料</div>
+                    <div class="grid__bgWhite12">毎月20リンクまで無料</div>
+                    <div class="grid__bgWhite13">1000個で200元～</div>
+                    <div class="grid__bgWhite14">1000個で200元～</div>
+                    <div class="grid__bgWhite15">1000個で200元～</div>
+                    <div class="grid__bgWhite16">有料相談150元/個</div>
+                    <div class="grid__bgWhite17">月3回まで無料</div>
+                    <div class="grid__bgWhite18">月3回まで無料</div>
+                    <div class="grid__bgWhite19">2元</div>
+                    <div class="grid__bgWhite20">2元</div>
+                    <div class="grid__bgWhite21">6元/点（百円ショッ <br> プ <br> サービス <br> を契約した方に <br> 適用）</div>
+                    <div class="grid__bgWhite22">3元</div>
+                    <div class="grid__bgWhite23">3元</div>
+                    <div class="grid__bgWhite24">0.5元</div>
+                    <div class="grid__bgWhite25">0.5元</div>
+                    <div class="grid__bgWhite26">取り外し2元/点
+                        縫い付け3元/点</div>
+                    <div class="grid__bgWhite27">取り外し2元/点
+                        縫い付け3元/点</div>
+                    <div class="grid__bgWhite28">5元</div>
+                    <div class="grid__bgWhite29">5元</div>
+                    <div class="grid__bgWhite30">オリジナル紙タグ取り付け0.5元/点 <br>
+                        取り外し/無料</div>
+                    <div class="grid__bgWhite31">オリジナル紙タグ取り付け0.5元/点 <br>
+                        取り外し/無料</div>
+                    <div class="grid__bgWhite32">1.5元</div>
+                    <div class="grid__bgWhite33">1.5元</div>
+                    <div class="grid__bgWhite34">1元</div>
+                    <div class="grid__bgWhite35">1元</div>
+                    <div class="grid__bgWhite36">1.5元</div>
+                    <div class="grid__bgWhite37">1.5元</div>
+                    <div class="grid__bgWhite38">1.5元</div>
+                    <div class="grid__bgWhite39">0.8元</div>
+                    <div class="grid__bgWhite40">0.8元</div>
+                    <div class="grid__bgWhite41">0.8元</div>
+                    <div class="grid__bgWhite42">〇 (別途料金)</div>
+                    <div class="grid__bgWhite43">〇 (別途料金)</div>
+                    <div class="grid__bgWhite44">〇 (別途料金)</div>
+                    <div class="grid__bgWhite45">6元</div>
+                    <div class="grid__bgWhite46">6元</div>
+                    <div class="grid__bgWhite47">6元</div>
+                    <div class="grid__bgWhite48">5元</div>
+                    <div class="grid__bgWhite49">5元</div>
+                    <div class="grid__bgWhite50">5元</div>
+                    <div class="grid__bgWhite51">4元</div>
+                    <div class="grid__bgWhite52">4元</div>
+                    <div class="grid__bgWhite53">4元</div>
+                    <div class="grid__bgWhite54">2元/点</div>
+                    <div class="grid__bgWhite55">2元/点</div>
+                    <div class="grid__bgWhite56">2元/点</div>
+                    <div class="grid__bgWhite57">0.5元</div>
+                    <div class="grid__bgWhite58">0.5元</div>
+                    <div class="grid__bgWhite59">0.5元</div>
+                    <div class="grid__bgWhite60">2～3点以内 <br> 2元/点</div>
+                    <div class="grid__bgWhite61">2～3点以内 <br> 2元/点</div>
+                    <div class="grid__bgWhite62">2～3点以内 <br> 2元/点</div>
+                    <div class="grid__bgWhite63">4～5点以内 <br> 3元/点</div>
+                    <div class="grid__bgWhite64">4～5点以内 <br> 3元/点</div>
+                    <div class="grid__bgWhite65">4～5点以内 <br> 3元/点</div>
+                    <div class="grid__bgWhite66">6～7点以内 <br> 4元/点</div>
+                    <div class="grid__bgWhite67">6～7点以内 <br> 4元/点</div>
+                    <div class="grid__bgWhite68">6～7点以内 <br> 4元/点</div>
+                    <div class="grid__bgWhite69">8～9点以内 <br> 5元/点</div>
+                    <div class="grid__bgWhite70">8～9点以内 <br> 5元/点</div>
+                    <div class="grid__bgWhite71">8～9点以内 <br> 5元/点</div>
+                    <div class="grid__bgWhite72">8～9点以内 <br> 5元/点</div>
+                    <div class="grid__bgWhite73">8～9点以内 <br> 5元/点</div>
+                    <div class="grid__bgWhite74">8～9点以内 <br> 5元/点</div>
+                    <div class="grid__bgWhite75">2元/点</div>
+                    <div class="grid__bgWhite76">2元/点</div>
+                    <div class="grid__bgWhite77">2元/点</div>
+                    <div class="grid__bgWhite78">専任スタッフ付き</div>
+                    <div class="grid__bgWhite79">専任スタッフ付き</div>
+                    <div class="grid__bgWhite80">専任スタッフ付き</div>
+                    <div class="grid__bgWhite81">平日のみ</div>
+                    <div class="grid__bgWhite82">平日のみ</div>
+                    <div class="grid__bgWhite83">平日のみ</div>
+                    <div class="grid__bgWhite84">対応</div>
+                    <div class="grid__bgWhite85">対応</div>
+                    <div class="grid__bgWhite86">対応</div>
+                    <div class="grid__bgWhite87">500元/月</div>
+                    <div class="grid__bgWhite88">500元/月</div>
+                    <div class="grid__bgWhite89">500元/月</div>
+                    <div class="grid__bgWhite90">10元/枚～</div>
+                    <div class="grid__bgWhite91">10元/枚～</div>
+                    <div class="grid__bgWhite92">10元/枚～</div>
+                    <div class="grid__bgWhite93">0.8元/枚</div>
+                    <div class="grid__bgWhite94">0.8元/枚</div>
+                    <div class="grid__bgWhite95">10元/個 （15KG以上無料バンド）</div>
                   </div>
                   <!-- /.grid2 -->
-                  
+
+                  <div class="grid3">
+                    <div class="grid__bg2White1">プラミアムエコノミー</div>
+                    <div class="grid__bg2White2">ビジネスクラス</div>
+                    <div class="grid__bg2White3">ファーストクラス</div>
+                    <div class="grid__bg2White4">9,800</div>
+                    <div class="grid__bg2White5">29,800円</div>
+                    <div class="grid__bg2White6">59,800円</div>
+                    <div class="grid__bg2White7">5%</div>
+                    <div class="grid__bg2White8">無料</div>
+                    <div class="grid__bg2White9">無料</div>
+                    <div class="grid__bg2White10">5元/リンク</div>
+                    <div class="grid__bg2White11">毎月20リンクまで無料</div>
+                    <div class="grid__bg2White12">毎月20リンクまで無料</div>
+                    <div class="grid__bg2White13">1000個で200元～</div>
+                    <div class="grid__bg2White14">1000個で200元～</div>
+                    <div class="grid__bg2White15">1000個で200元～</div>
+                    <div class="grid__bg2White16">有料相談150元/個</div>
+                    <div class="grid__bg2White17">月3回まで無料</div>
+                    <div class="grid__bg2White18">月3回まで無料</div>
+                    <div class="grid__bg2White19">2元</div>
+                    <div class="grid__bg2White20">2元</div>
+                    <div class="grid__bg2White21">2元</div>
+                    <div class="grid__bg2White22">3元</div>
+                    <div class="grid__bg2White23">3元</div>
+                    <div class="grid__bg2White24">3元</div>
+                    <div class="grid__bg2White25">0.5元</div>
+                    <div class="grid__bg2White26">0.5元</div>
+                    <div class="grid__bg2White27">0.5元</div>
+                    <div class="grid__bg2White28">取り外し2元/点縫い付け3元/点</div>
+                    <div class="grid__bg2White29">取り外し2元/点縫い付け3元/点</div>
+                    <div class="grid__bg2White30">取り外し2元/点 縫い付け3元/点</div>
+                    <div class="grid__bg2White31">5元</div>
+                    <div class="grid__bg2White32">5元</div>
+                    <div class="grid__bg2White33">5元</div>
+                    <div class="grid__bg2White34">オリジナル紙タグ取り付け0.5元/点 <br>取り外し/無料</div>
+                    <div class="grid__bg2White35">オリジナル紙タグ取り付け0.5元/点 <br>取り外し/無料</div>
+                    <div class="grid__bg2White36">オリジナル紙タグ取り付け0.5元/点 <br>取り外し/無料</div>
+                    <div class="grid__bg2White37">1.5元</div>
+                    <div class="grid__bg2White38">1.5元</div>
+                    <div class="grid__bg2White39">1.5元</div>
+                    <div class="grid__bg2White40">1元</div>
+                    <div class="grid__bg2White41">1元</div>
+                    <div class="grid__bg2White42">1.5元</div>
+                    <div class="grid__bg2White43">1.5元</div>
+                    <div class="grid__bg2White44">1.5元</div>
+                    <div class="grid__bg2White45">1.5元</div>
+                    <div class="grid__bg2White46">0.8元</div>
+                    <div class="grid__bg2White47">0.8元</div>
+                    <div class="grid__bg2White48">0.8元</div>
+                    <div class="grid__bg2White49">〇 (別途料金)</div>
+                    <div class="grid__bg2White50">〇 (別途料金)</div>
+                    <div class="grid__bg2White51">〇 (別途料金)</div>
+                    <div class="grid__bg2White52">6元</div>
+                    <div class="grid__bg2White53">6元</div>
+                    <div class="grid__bg2White54">6元</div>
+                    <div class="grid__bg2White55">5元</div>
+                    <div class="grid__bg2White56">5元</div>
+                    <div class="grid__bg2White57">5元</div>
+                    <div class="grid__bg2White58">4元</div>
+                    <div class="grid__bg2White59">4元</div>
+                    <div class="grid__bg2White60">4元</div>
+                    <div class="grid__bg2White61">2元/点</div>
+                    <div class="grid__bg2White62">2元/点</div>
+                    <div class="grid__bg2White63">2元/点</div>
+                    <div class="grid__bg2White64">0.5元</div>
+                    <div class="grid__bg2White65">0.5元</div>
+                    <div class="grid__bg2White66">0.5元</div>
+                    <div class="grid__bg2White67">3点以内1元/点</div>
+                    <div class="grid__bg2White68">3点以内1元/点</div>
+                    <div class="grid__bg2White69">3点以内1元/点</div>
+                    <div class="grid__bg2White70">2元/点</div>
+                    <div class="grid__bg2White71">2元/点</div>
+                    <div class="grid__bg2White72">2元/点</div>
+                    <div class="grid__bg2White73">専任スタッフ付き</div>
+                    <div class="grid__bg2White74">専任スタッフ付き</div>
+                    <div class="grid__bg2White75">専任スタッフ付き</div>
+                    <div class="grid__bg2White76">平日のみ</div>
+                    <div class="grid__bg2White77">平日のみ</div>
+                    <div class="grid__bg2White78">平日のみ</div>
+                    <div class="grid__bg2White79">対応</div>
+                    <div class="grid__bg2White80">対応</div>
+                    <div class="grid__bg2White81">対応</div>
+                    <div class="grid__bg2White82">500元/月</div>
+                    <div class="grid__bg2White83">500元/月</div>
+                    <div class="grid__bg2White84">500元/月</div>
+                    <div class="grid__bg2White85">10元/枚～</div>
+                    <div class="grid__bg2White86">10元/枚～</div>
+                    <div class="grid__bg2White87">10元/枚～</div>
+                    <div class="grid__bg2White88">0.8元/枚</div>
+                    <div class="grid__bg2White89">0.8元/枚</div>
+                    <div class="grid__bg2White90">10元/個 （15KG以上無料バンド）</div>
+                  </div>
+                  <!-- /.grid3 -->
+
+                  <div class="grid4">
+                    <div class="grid__red1">日中保管サービス</div>
+                    <div class="grid__red2">ビジネスプラン加入のお客様は最大1か月無料保管いたします</div>
+                    <div class="grid__red3">中国倉庫</div>
+                    <div class="grid__red4">1パレット</div>
+                    <div class="grid__red5">3,000円/月</div>
+                    <div class="grid__red6">※0.1元×(箱サイズ 縦×横×高さ㎝/1000)×保管日数/月間</div>
+                    <div class="grid__red7">日本倉庫(埼玉県)</div>
+                    <div class="grid__red8">1パレット</div>
+                    <div class="grid__red9">90元/月</div>
+                    <div class="grid__red10">発送代行サービス</div>
+                    <div class="grid__red11">別途ファイル</div>
+                    <div class="grid__red12">発送代行サービス</div>
+                    <div class="grid__red13">別途ファイル</div>
+                  </div>
+                  <!-- grid3 -->
+
+                  <a href="#" class="btn btn-orange">CONTACT資料請求・お問い合わせ</a>
                   
             </div>
             <!-- /.pricing-grids -->
